# semidbm2

./: .gitignore  .travis.yml  COPYING  README.rst  pyproject.toml  setup.py  test_semidbm.py  test_semidbm2.py  tox.ini
.github/workflows/: test.yml
docs/: api_semidbm.rst  benchmarks.rst  changelog.rst  conf.py  details.rst  index.rst  overview.rst
scripts/: .codemod.bookmark  benchmark  loadtime  makedb  tps
scripts/adapters/: bdb_btopen.py  bdb_hashopen.py  bdb_minimal.py  builtindict.py
semidbm/: __init__.py  db.py
semidbm2/: __init__.py  compat.py  db.py  win32.py
semidbm2/loaders/: __init__.py  mmapload.py  simpleload.py
